@@ -1,3 +1,13 @@
+2010-09-25  Patrick Gansterer  <paroga@webkit.org>
+
+        Unreviewed.
+
+        Fix typo in StringHasher class
+        https://bugs.webkit.org/show_bug.cgi?id=45970
+
+        * wtf/StringHashFunctions.h:
+        (WTF::StringHasher::createHash):
+
 2010-09-24  Patrick Gansterer  <paroga@paroga.com>
 
         Reviewed by Gavin Barraclough.
